# langchain-mcp-adapter

./: langhchain_client.py  main.py  pyproject.toml
servers/: weather_server.py
